# ChangeLog for dev-util/ccache
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/ccache/ChangeLog,v 1.61 2007/04/21 13:07:19 lisa Exp $

*ccache-2.4-r7 (21 Apr 2007)

  21 Apr 2007; Lisa Seelye <lisa@gentoo.org> +ccache-2.4-r7.ebuild:
  bug 174839

  05 Mar 2007; Marius Mauch <genone@gentoo.org> ccache-2.4-r6.ebuild:
  Replacing einfo with elog

  05 Mar 2007; Lisa Seelye <lisa@gentoo.org> -ccache-2.2.ebuild,
  -ccache-2.3.ebuild, -ccache-2.4.ebuild, -ccache-2.4-r1.ebuild,
  -ccache-2.4-r2.ebuild:
  Pruning old ebuilds

  04 Mar 2007; Stuart Longland <redhatter@gentoo.org> ccache-2.4-r6.ebuild:
  Tested and working on mips. No bugs in the last 30 days. Marking stable as
  per bug #159527.

  30 Jan 2007; Steve Dibb <beandog@gentoo.org> ccache-2.4-r6.ebuild:
  amd64 stable, bug 159527

  04 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> ccache-2.4-r6.ebuild:
  Stable on IA64.

  04 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> ccache-2.4-r6.ebuild:
  Stable on Alpha, bug 159527.

  02 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> ccache-2.4-r6.ebuild:
  Stable on sparc wrt #159527

  31 Dec 2006; Tom Gall <tgall@gentoo.org> ccache-2.4-r6.ebuild:
  ppc64 stable bug #159527

  31 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> ccache-2.4-r6.ebuild:
  ppc stable wrt bug #159527

  31 Dec 2006; Andrej Kacian <ticho@gentoo.org> ccache-2.4-r6.ebuild:
  Stable on x86, bug #159527.

  08 Dec 2006; Jeroen Roovers <jer@gentoo.org> ccache-2.4-r6.ebuild:
  Stable for HPPA.

  15 Oct 2006; Aron Griffis <agriffis@gentoo.org> ccache-2.4-r2.ebuild:
  Mark 2.4-r2 stable on ia64

*ccache-2.4-r6 (15 Sep 2006)

  15 Sep 2006; Lisa Seelye <lisa@gentoo.org> +ccache-2.4-r6.ebuild:
  okay, apparently -r5 wasnt binary friendly. bug 145167 comment

*ccache-2.4-r5 (14 Sep 2006)

  14 Sep 2006; Lisa Seelye <lisa@gentoo.org> -ccache-2.4-r4.ebuild,
  +ccache-2.4-r5.ebuild: