@@ -4,5 +4,5 @@ AUX ccache-config 1554 RMD160 cbcb9cf3b2313002e2a3336fb39e161c61d350a6 SHA1 919e
 DIST ccache-2.4.tar.gz 86363 RMD160 43a0647c7faf659121a53a92ec45d245b8140124 SHA1 9833ec13de9b90d5409e60d679ac681115ef465e SHA256 435f862ca5168c346f5aa9e242174bbf19a5abcaeecfceeac2f194558827aaa0
 EBUILD ccache-2.4-r6.ebuild 1883 RMD160 55ca79d232a48594191716359f4bd4af4016dd7d SHA1 6c112de17d726ccbba49674dc77c2fcdd25fd75d SHA256 826a7fca4514ccfd330f24bace0a35ba4ea8f79f12fa96e42b0feaef68ab3599
 EBUILD ccache-2.4-r7.ebuild 1980 RMD160 2db1856cec6e9f8ed6ce9b885136e6ae99620d41 SHA1 eb910d8e823278d43be09f368fc0fe4a02738e5d SHA256 50bb14de5fad2b49253c5b2d02d054dc2f2a5ed86f82c270aa4c155a34cd5e80
-MISC ChangeLog 7946 RMD160 45ff2d4b7f72c7e3c6b58ec8b0302460780f249e SHA1 04ef46bf3000074a8aae2a5687226b6777c2c049 SHA256 5da2e4c0dce26161998f5faae758f3026fcad50d978d936e17e798337a330135
-MISC metadata.xml 386 RMD160 ce4575786bca697d8f590d466ac4ffbeaed873cb SHA1 c1c307ca690b90b14ef22dfeb2f467dd4076ccd7 SHA256 c15bee3a15e41c52b133ef6b2ec2fb16ba668d25f5c890d1ab3efa89a9043518
+MISC ChangeLog 8094 RMD160 1f73a7ff0993a67f1f1ef7f691a248241a91a6fd SHA1 fc3d256ec0ed8f33bcb64067d0e7ae888c0f395c SHA256 a8022d9ea1cbc1c5930189cd910373c731a20233dad49d6afeb14ddb01d42e55
+MISC metadata.xml 420 RMD160 f7b5619b90e8940107ce35bdbc1e09f11e181808 SHA1 19466f4d0898a41de467746ed9bcf7afe36ca7b3 SHA256 312213dd5ebdb44008d40456e31402bafbc6c3de8124e6e062a2377215df9b17
