@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-  <email>lisa@gentoo.org</email>
-</maintainer>
-<longdescription>ccache acts as a caching pre-processor to C/C++ compilers, improving compilation time when recompiling previously compiled source.</longdescription>
+	<herd>no-herd</herd>
+	<maintainer>
+		<email>maintainer-needed@gentoo.org</email>
+	</maintainer>
+	<longdescription lang="en">
+		ccache acts as a caching pre-processor to C/C++ compilers, improving
+		compilation time when recompiling previously compiled source.
+	</longdescription>
 </pkgmetadata>
